# aioze

./: README.md  requirements.txt  setup.cfg
.github/workflows/: pythonpackage.yml
aioze/: __init__.py  access.py  ozeapiclient.py
aioze/api/: __init__.py  email.py  event.py  grade.py  homework.py  information.py  notification.py  punishment.py  userinfo.py
