[metadata]
name = aioze
version = attr: aioze.__version__
description = Python wrapper for the oZe ENT http API
long_description = file: README.md
keywords = oZe, ENT, ENC, API
license = Apache
classifiers =
    Framework :: aiohttp
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
install_requires =
    aiohttp
    async-timeout
    python-dateutil
    requests

[options.package_data]
* = *.txt, *.md

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*